--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"php": ">=5.3.7",
 		"phpoffice/phpword": "^1.0",
 		"dompdf/dompdf": "^2.0",
-		"phpoffice/phpspreadsheet": "1.0"
+		"phpoffice/phpspreadsheet": "^1.28"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
